# mask_detection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: mask_detection_ci_cd.yaml
notebooks/: drafts.ipynb
src/: main.py  utils.py
src/core/: configs.py
src/dataloader/: loader.py
src/model/: base_model.py  net_model.py
tests/: test_model.py
