[tool.poetry]
name = "mask-detection"
version = "1.0.0"
description = ""
authors = ["Tedonze__Konkobo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
s3fs = "^2023.12.1"
pandas = "^2.1.4"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
