[tool.poetry]
name = "mask-detection"
version = "1.0.0"
description = ""
authors = ["Tedonze__Konkobo"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
s3fs = "^2023.12.1"
pandas = "^2.1.4"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
torchvision = "^0.16.1"
python-multipart = "^0.0.6"
streamlit = "^1.29.0"
pytest = "^7.4.3"
flake8 = "^6.1.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
